CHATS_SIT/force-app/main/default/objects/CP_CRP_Feedback__c.object
<CustomObject>
    <fields>
        <fullName>County__c</fullName>
        <label>County</label>
        <referenceTo>T_COUNTY__c</referenceTo>
        <relationshipLabel>CP/CRP Feedbacks</relationshipLabel>
        <relationshipName>CP_CRP_Feedbacks</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Feedback__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Feedback</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>feedback_type__c</fullName>
        <label>feedback type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>CP</fullName>
                </value>
                <value>
                    <fullName>CRP</fullName>
                </value>
                <value>
                    <fullName>CRP_Rate</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Identifier__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Identifier</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Section__c</fullName>
        <label>Section</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Otherfees</fullName>
                </value>
                <value>
                    <fullName>Holiday</fullName>
                </value>
                <value>
                    <fullName>Drop_In</fullName>
                </value>
                <value>
                    <fullName>Rates</fullName>
                </value>
                <value>
                    <fullName>Attendance</fullName>
                </value>
                <value>
                    <fullName>QE</fullName>
                </value>
                <value>
                    <fullName>SC</fullName>
                </value>
                <value>
                    <fullName>Exempt</fullName>
                </value>
                <value>
                    <fullName>Home</fullName>
                </value>
                <value>
                    <fullName>Center</fullName>
                </value>
                <value>
                    <fullName>countyAdmin</fullName>
                </value>
                <value>
                    <fullName>referralInfo</fullName>
                </value>
                <value>
                    <fullName>voterRegis_Tanf</fullName>
                </value>
                <value>
                    <fullName>voterRegis_LI</fullName>
                </value>
                <value>
                    <fullName>appReferral</fullName>
                </value>
                <value>
                    <fullName>programIntegrity</fullName>
                </value>
                <value>
                    <fullName>fraudPrevention</fullName>
                </value>
                <value>
                    <fullName>fraudDetection</fullName>
                </value>
                <value>
                    <fullName>determiningIntentionProgram</fullName>
                </value>
                <value>
                    <fullName>adminRecoveries</fullName>
                </value>
                <value>
                    <fullName>samplingDecisions</fullName>
                </value>
                <value>
                    <fullName>assurance_Certs</fullName>
                </value>
                <value>
                    <fullName>countyReviewPlan</fullName>
                </value>
                <value>
                    <fullName>approvedAcvities</fullName>
                </value>
                <value>
                    <fullName>AttendanceTracking</fullName>
                </value>
                <value>
                    <fullName>parentFees</fullName>
                </value>
                <value>
                    <fullName>waitlist</fullName>
                </value>
                <value>
                    <fullName>enrollmentFreeze</fullName>
                </value>
                <value>
                    <fullName>protectiveServices</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>CP/CRP Feedback</label>
    <nameField>
        <displayFormat>CF-{0000000000}</displayFormat>
        <label>CP/CRP Feedback Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>CP/CRP Feedbacks</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>